--- a/test/ref/test.html
+++ b/test/ref/test.html
@@ -8,6 +8,7 @@
     <img src="./images/img_1.png" alt=""/>
     <img src="./images/img_2.png" alt=""/>
     <img src="./images/img_3.png" alt=""/>
+    <img src="./images/img_4.png" alt=""/>
     <img src="/public/images/img_1.png" alt=""/>
 </body>
 </html>
