change unit test

--- a/test/ref/test.html
+++ b/test/ref/test.html
@@ -5,8 +5,8 @@
     <title></title>
 </head>
 <body>
-    <img src="./images/img_1.png" alt=""/>
-    <img src="./images/img_2.png" alt=""/>
+    <img src="./images/img_1.png?vi=3123" alt=""/>
+    <img src="images/inner-img/img_2.png" alt=""/>
     <img src="./images/img_3.png" alt=""/>
     <img src="./images/img_4.png" alt=""/>
     <img src="/public/images/img_1.png" alt=""/>
